03. Implementando o metodo de seguir um usuario
