# src/main/java/io/github/dougllasfps/quarkussocial/rest/FollowerResource.java
@@ -1,13 +1,14 @@
 package io.github.dougllasfps.quarkussocial.rest;
 
+import io.github.dougllasfps.quarkussocial.domain.model.Follower;
 import io.github.dougllasfps.quarkussocial.domain.repository.FollowerRepository;
 import io.github.dougllasfps.quarkussocial.domain.repository.UserRepository;
+import io.github.dougllasfps.quarkussocial.rest.dto.FollowerRequest;
 
 import javax.inject.Inject;
-import javax.ws.rs.Consumes;
-import javax.ws.rs.Path;
-import javax.ws.rs.Produces;
+import javax.ws.rs.*;
 import javax.ws.rs.core.MediaType;
+import javax.ws.rs.core.Response;
 
 @Path("/users/{userId}/followers")
 @Consumes(MediaType.APPLICATION_JSON)
@@ -24,5 +25,24 @@ public class FollowerResource {
         this.userRepository = userRepository;
     }
 
-    
+    @PUT
+    public Response followUser(
+            @PathParam("userId") Long userId, FollowerRequest request){
+        var user = userRepository.findById(userId);
+        if(user == null){
+            return Response.status(Response.Status.NOT_FOUND).build();
+        }
+
+        var follower = userRepository.findById(request.getFollowerId());
+
+        var entity = new Follower();
+        entity.setUser(user);
+        entity.setFollower(follower);
+
+        repository.persist(entity);
+
+        return Response.status(Response.Status.NO_CONTENT).build();
+
+    }
+
 }
