# src/main/java/io/github/dougllasfps/quarkussocial/rest/dto/FollowerRequest.java
@@ -1,0 +1,8 @@
+package io.github.dougllasfps.quarkussocial.rest.dto;
+
+import lombok.Data;
+
+@Data
+public class FollowerRequest {
+    private Long followerId;
+}
